added specifics to all goals

--- a/management/goals/Team1/Team1_week_10-16_10-23.md
+++ b/management/goals/Team1/Team1_week_10-16_10-23.md
@@ -3,8 +3,20 @@ Manager: Andrew Welby
 ## Goals
 
 1. AI ship with simple pathfinding movement.
+    * Theta Star: (Pathfinding algorithm)
+    * Boolean Representation of Map (1 if object)
+    * AI ship follows path from left side of star to right side of star
 2. Gravity for Physics
+    * Objects implement class, and update sprite class. (Might depend on level gen.)
+    * Add a star and have ship move towards it over time.
 3. Frame Independent for Physics
+    * Implement the time data class in sprite class.
+    * Show uptick time differentials.
 4. Randomized Space Object Tiles for Level Gen.
+    * Fix the implementation so it can be outputted to main file.
 5. Procedurally Generated Maze for Level Gen.
+    * Maze will be outputted to console as ASCII
+    * Implement in level gen environment as separate class or implement into used class
 6. Working Movement for Maze for Level Gen.
+    * Ship moves through maze
+    * Use basic movement separate from physics team.
