Made Correction to Team 1 Goals for this week

--- a/management/goals/Team1/Team1_week_ 10-30_11-6.md
+++ b/management/goals/Team1/Team1_week_ 10-30_11-6.md
@@ -12,10 +12,10 @@
 ### AI
 1. Implement a polygonal navigation mesh to pathfind along instead of going point-by-point
 2. Smooth rendering of Pathfinding
-3. Allow Player to ship to move in ai enviroment when Ai ships are pathfinding
+3. Allow Player to move their respective ship in the ai enviroment when the Ai ships are pathfinding
 
 ### General
 
-1. Continue working on implementing sounds effect for game
+1. Continue working on sounds effect for game
 2. Work on Assests for UI
 
