Changes to goals

--- a/management/goals/Team1/Team1_week_11-6_11-13.md
+++ b/management/goals/Team1/Team1_week_11-6_11-13.md
@@ -9,9 +9,10 @@ AI:
 Level Generation:
 - Spotlight/fog of war camera on maze
 - Have different types of galaxies spawn depending on what type of star spawns
+- Contextual entrance/exit depending on where the maze is entered from
 
 Physics:
-- Finish shooting
+- Finish space station implementation 
 - Expanding collision
 
 General:
